--- a/src/app/dashboard/add-problem/add-problem.component.html
+++ b/src/app/dashboard/add-problem/add-problem.component.html
@@ -1,6 +1,70 @@
 <div class="container">
   <app-navbar title="Add Problem"></app-navbar>
   <div class="row" style="margin-top: 30px">
+<div class="col-sm-8" >
+
+  <form>
+    <div class="form-group">
+      <label >Problem Name</label>
+      <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Problem Name">
+    </div>
+    <div class="form-group">
+      <label>Problem Statement</label>
+      <textarea cols="78" rows="10"></textarea>
+    </div>
+    <div class="form-group">
+      <label style="margin-bottom: 5px;">Diificulty Level</label><br>
+      <select>
+        <option selected="selected" disabled>Select Option</option>
+        <option value="easy">Easy</option>
+        <option value="medium">Medium</option>
+        <option value="hard">Hard</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label>Input/Output File</label>
+      <table>
+        <thead>
+        <tr>
+           <th width="40%">Input</th><th width="40%">Output</th><th width="20%"></th>
+        </tr>
+      </thead>
+      <tbody>
+          <tr>
+              <td width="40%"> dbgnf</td>
+              <td width="40%"> dbgnf</td>
+              <td width="20%"><button>add</button></td>
+            </tr>
+      </tbody>
+
+        <tfoot>
+            <tr>
+              <td width="40%"><div class="form-group">
+                  <label for="inFile">Input</label>
+                  <input type="file" id="inFile"></div></td>
+              <td width="40%"><div class="form-group">
+                  <label for="outFile">Output</label>
+                  <input type="file" id="outFile">
+              </div></td>
+              <td width="20%"><button>add</button></td>
+            </tr>
+          </tfoot>
+      </table>
+      
+    </div>
+
+
+
+
+
+    <button type="submit" class="btn btn-success">Submit</button>
+  </form>
+  
+  
+</div>
+<div class="col-sm-4">
+hii
+</div>
 
 
   </div>
